HW1- CSS Judd Fineberg

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Travel</title>
+    <title>Judd Fineberg</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <img src="judd_fineberg2.jpg">
-      <h1>J</h1>
+      <h1>Judd Fineberg</h1>
       <h2>Attorney at Law</h2>
       <p>Contact Me:</p>
       <ul>
